scss/pages/_page-home.scss
/* ... */
.clockdiv {
  margin-top: 30px;
  font-family: $font_family_3;
  color: $color_6;
  text-align: center;
  font-size: 36px;
  > div {
    margin-right: 20px;
    display: inline-block;
  }
  div {
    > span {
      padding: 15px 30px;
      border: 1px solid $color_8;
    }
  }
  .days,
  .hours,
  .minutes,
  .seconds {
    font-size: 36px;
  }
}
.smalltext {
  margin-top: 30px;
  padding-top: 5px;
  font-size: 16px;
}
#radio1 {
  margin-top: 20px;
}
.schedule {
  margin: 0 auto;
  min-height: 500px;
  position: relative;
  display: flex;
  align-items: center;
  #top-leaf {
    position: absolute;
    top: 0px;
  }
  #bottom-leaf {
    position: absolute;
    bottom: 0px;
    right: 0px;
  }
  .text-centr {
    text-align: center;
  }
}
@media all and (max-width: 767px) {
  section {
    padding: 20px 0;
  }
  section.fullscreen {
    &:not(.header) {
      height: auto;
      padding: 120px 0;
      .container {
        top: 0;
        transform: translateY(0);
        -webkit-transform: translateY(0);
        -moz-transform: translateY(0);
      }
    }
  }
  br {
    display: none;
  }
  .header {
    h1 {
      font-size: 80px;
      line-height: 88px;
    }
  }
  .header-1 {
    height: 500px;
  }
  .header-2 {
    height: 500px;
  }
  .story-2 {
    img {
      margin-bottom: 5px;
      max-width: 100%;
      &:last-child {
        margin-bottom: 30px;
      }
      &:hover {
        transform: scale(1);
        -webkit-transform: scale(1);
      }
    }
    img.fade {
      opacity: 1;
      transform: scale(1);
      -webkit-transform: scale(1);
    }
  }
  .details-1 {
    .feature {
      br {
        display: block;
      }
    }
  }
  .details-2 {
    h1 {
      font-size: 64px;
      line-height: 72px;
    }
  }
  .details-3 {
    .feature {
      br {
        display: block;
      }
    }
  }
  .details-4 {
    .feature {
      width: 100%;
      br {
        display: block;
      }
    }
  }
  .details-5 {
    img {
      margin-bottom: 8px;
      max-width: 100%;
    }
    br {
      display: block;
    }
  }
  .gallery-1 {
    height: 400px;
    .slides {
      li {
        height: 400px;
      }
    }
  }
  .gallery-2 {
    h1 {
      font-size: 60px;
      max-width: 100%;
      font-weight: 300;
      line-height: 68px;
      margin-bottom: 8px;
    }
    // .instafeed {
    // 	li {
    // 		width: 50%;
    // 		&:nth-child(n&+5) {
    // 			display: none;
    // 		}
    // 	}
    // }
  }
  .radio-holder.naked {
    margin-bottom: 20px;
  }
  .rsvp-2 {
    .form-wrapper {
      width: 100%;
      padding: 20px;
    }
  }
}
@media all and (max-width: 990px) {
  h1 {
    font-size: 46px;
    line-height: 54px;
    font-weight: 300;
  }
  h2 {
    font-size: 38px;
    line-height: 46px;
    font-weight: 300;
  }
  h3 {
    font-size: 32px;
    line-height: 40px;
    font-weight: 300;
  }
  h4 {
    font-size: 22px;
    line-height: 30px;
    font-weight: 300;
  }
  h5 {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    text-transform: uppercase;
  }
  h6 {
    font-size: 12px;
    line-height: 20px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 2px;
    margin-right: -2px;
  }
  .gallery-2 {
    // .instafeed {
    // 	li {
    // 		width: 33.33333%;
    // 		&:nth-child(n&+7) {
    // 			display: none;
    // 		}
    // 	}
    // }
  }
}
@media all and (max-width: 768px) {
  h1 {
    font-size: 40px;
    line-height: 48px;
    font-weight: 300;
  }
  h2 {
    font-size: 32px;
    line-height: 38px;
    font-weight: 300;
  }
  h3 {
    font-size: 24px;
    line-height: 34px;
    font-weight: 300;
  }
  h4 {
    font-size: 22px;
    line-height: 30px;
    font-weight: 300;
  }
  h5 {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    text-transform: uppercase;
  }
  h6 {
    font-size: 12px;
    line-height: 20px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 2px;
    margin-right: -2px;
  }
  .nav-1 {
    height: auto;
    max-height: 60px;
    padding: 15px 15px;
    position: fixed;
    top: 0;
    width: 100;
    z-index: 99;
  }
  .menu {
    width: 100%;
    margin-top: 20px;
    text-align: center;
    transition: all 0.3s ease;
    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    li {
      float: none;
      margin-right: 0;
      margin-bottom: 8px;
      opacity: 0;
    }
  }
  .nav-open {
    max-height: 600px;
    .menu {
      li {
        opacity: 1;
      }
    }
  }
  .mobile-toggle {
    display: block;
  }
  .story-2 {
    img {
      max-width: 200px;
    }
  }
}
@media (min-width: 540px) {
  .btn {
    &:hover {
      background: $color_1;
      color: $color_5;
    }
  }
}
@media (max-width: 768px) {
  div.background-image-holder.push-left {
    background-position: 90% 100% !important;
  }
  div.background-image-holder.push-down {
    top: 10px;
    background-position: 30% 50% !important;
    background-repeat: no-repeat;
  }
  div.background-image-holder.swing {
    background-position: 20% 50% !important;
  }
}
@media all and (max-width: 1024px) {
  .story-2 {
    img {
      max-width: 250px;
    }
  }
  .details-2 {
    h1 {
      font-size: 80px;
      line-height: 88px;
      font-weight: 300;
    }
  }
}
@media all and (max-width: 1300px) {
  // .gallery-2 {
  // 	.instafeed {
  // 		li {
  // 			width: 25%;
  // 			&:nth-child(n&+9) {
  // 				display: none;
  // 			}
  // 		}
  // 	}
  // }
}
@media (min-width: 420px) {
  .radio-holder {
    &:hover {
      color: $color_5;
      background: $color_1;
    }
  }
}
/* ... */

